--- a/pandora/package.json
+++ b/pandora/package.json
@@ -16,6 +16,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^5.3.4",
     "redux": "^5.0.1",
+    "redux-thunk": "^3.1.0",
     "toastify-js": "^1.12.0"
   },
   "devDependencies": {
