--- a/pandora/package.json
+++ b/pandora/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^5.3.4",
+    "reactstrap": "^9.2.3",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
     "tailwind-merge": "^2.5.4",
