--- a/pandora/package.json
+++ b/pandora/package.json
@@ -19,6 +19,7 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^5.3.4",
     "reactstrap": "^9.2.3",
