Installs redux-logger

--- a/pandora/package.json
+++ b/pandora/package.json
@@ -24,6 +24,7 @@
     "react-router-dom": "^5.3.4",
     "reactstrap": "^9.2.3",
     "redux": "^5.0.1",
+    "redux-logger": "^3.0.6",
     "redux-thunk": "^3.1.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
