--- a/pandora/package.json
+++ b/pandora/package.json
@@ -26,6 +26,7 @@
     "redux": "^5.0.1",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^3.1.0",
+    "simple-icons": "^13.16.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "toastify-js": "^1.12.0"
