--- a/pandora/package.json
+++ b/pandora/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^5.3.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "crypto-js": "^4.2.0",
     "lucide-react": "^0.453.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
