--- a/pandora/package.json
+++ b/pandora/package.json
@@ -28,6 +28,7 @@
     "react-hook-form": "^7.53.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^5.3.4",
+    "react-toastify": "^10.0.6",
     "reactstrap": "^9.2.3",
     "redux": "^5.0.1",
     "redux-logger": "^3.0.6",
